--- a/CPOA TD2/.project
+++ b/CPOA TD2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CPOA TD2</name>
+	<name>CPOA_TD2</name>
 	<comment></comment>
 	<projects>
 	</projects>
