--- a/CPOA TD2/.project
+++ b/CPOA TD2/.project
@@ -14,4 +14,11 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>src/projet/utilitaire/Readme.txt</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/Desktop/Readme.txt</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
