--- a/CPOA TD2/.classpath
+++ b/CPOA TD2/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="src/mysql-connector-java-8.0.21.jar"/>
+	<classpathentry kind="lib" path="src/projet/utilitaire/Readme.txt"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_261"/>
 	<classpathentry kind="lib" path="C:/Program Files/SceneBuilder/app/scenebuilder-11.0.0-all.jar"/>
 	<classpathentry kind="output" path="bin"/>
